--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,8 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: StanleyGoldman/setup-gitversion@a374f5e1b8c33fb6efd03c402cb511f02eafa245
       uses: StanleyGoldman/setup-gitversion@v1.0.1
+      with:
+        gitversion-version: '5.x'
     
     #- name: GitVersion
     #  id: gitversion
