--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,12 +26,7 @@ jobs:
       uses: StanleyGoldman/setup-gitversion@v1.0.1
       with:
         gitversion-version: '5.x'
-    
-    - name: GitVersion
-      id: gitversion
-      uses: nmcc/actions-gitversion@v1
-      with:
-        path-to-gitversion: GitVersion.exe
+        run-gitversion: true
 
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker image
