--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,14 +17,13 @@ jobs:
     #- name: Build the Docker image
     #  run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     
-    - uses: actions/checkout@v2
-      name: Check out code
-    
-    - uses: actions/setup-gitversion@v1.0.0
-      id: gitversion
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.7
       with:
-        gitversion-version: 5.1.1
-    - run: GitVersion
+        versionSpec: '5.x'
+    - name: Determine Version
+      id:   gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.7
 
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker image
