--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,11 +31,26 @@ jobs:
       id:   gitversion
       uses: gittools/actions/gitversion/execute@v0.9.7
 
-    - uses: mr-smithers-excellent/docker-build-push@v5
-      name: Build & push Docker image
+    - name: Login to ACR
+      uses: docker/login-action@v1
       with:
-        image: blazor-conf-2022
-        tags: ${{ steps.gitversion.outputs.SemVer }}, latest
         registry: blazorconf2022.azurecr.io
         username: ${{ secrets.container_registry_username }}
         password: ${{ secrets.container_registry_password }}
+
+    - name: Build and push core image
+      uses: docker/build-push-action@v2
+      with:
+        image: blazor-conf-2022
+        context: .
+        tags: ${{ steps.gitversion.outputs.SemVer }}, latest
+        push: true
+
+    # - uses: mr-smithers-excellent/docker-build-push@v5
+    #   name: Build & push Docker image
+    #   with:
+    #     image: blazor-conf-2022
+    #     tags: ${{ steps.gitversion.outputs.SemVer }}, latest
+    #     registry: blazorconf2022.azurecr.io
+    #     username: ${{ secrets.container_registry_username }}
+    #     password: ${{ secrets.container_registry_password }}
