--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,9 @@ jobs:
       id:   gitversion
       uses: gittools/actions/gitversion/execute@v0.9.7
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
     - name: Login to ACR
       uses: docker/login-action@v1
       with:
