--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      
+
     - name: Login to ACR
       uses: docker/login-action@v1
       with:
@@ -46,8 +46,8 @@ jobs:
       with:
         context: .
         tags: |
-          blazor-conf-2022:${{ steps.gitversion.outputs.SemVer }}
-          blazor-conf-2022:latest
+          blazorconf2022.azurecr.io/blazor-conf-2022:${{ steps.gitversion.outputs.SemVer }}
+          blazorconf2022.azurecr.io/blazor-conf-2022:latest
         push: true
 
     # - uses: mr-smithers-excellent/docker-build-push@v5
@@ -58,3 +58,8 @@ jobs:
     #     registry: blazorconf2022.azurecr.io
     #     username: ${{ secrets.container_registry_username }}
     #     password: ${{ secrets.container_registry_password }}
+
+    - name: Create tag repository
+      run: |
+        git tag "${{ steps.gitversion.outputs.SemVer }}"
+        git push origin "${{ steps.gitversion.outputs.SemVer }}"
