--- a/.github/workflows/build-deploy-image.yml
+++ b/.github/workflows/build-deploy-image.yml
@@ -5,14 +5,32 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+  workflow_dispatch:
+  
 jobs:
-
-  Deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    
+      - uses: actions/checkout@v2
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+          include-prerelease: true
+
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+
+      - name: test with dotnet
+        run: dotnet test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -45,7 +63,7 @@ jobs:
           blazorconf2022.azurecr.io/blazor-conf-2022:${{ steps.gitversion.outputs.SemVer }}
           blazorconf2022.azurecr.io/blazor-conf-2022:latest
         push: true
-        
+
     - name: Create tag repository
       run: |
         git tag "${{ steps.gitversion.outputs.SemVer }}"
