--- a/.github/workflows/master_blazorconf2022-ci-cd-code.yml
+++ b/.github/workflows/master_blazorconf2022-ci-cd-code.yml
@@ -4,10 +4,10 @@
 name: Build and deploy ASP.Net Core app to Azure Web App - blazorconf2022-ci-cd-code
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master
+  # workflow_dispatch:
 
 jobs:
   build:
