--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: test with dotnet
+      - name: Test with dotnet
         run: dotnet test
