--- a/.github/workflows/master_blazorconf2022-ci-cd-code.yml
+++ b/.github/workflows/master_blazorconf2022-ci-cd-code.yml
@@ -78,12 +78,12 @@ jobs:
         with:
           app-name: 'blazorconf2022-ci-cd-code'
           slot-name: 'Stage'
-          publish-profile: ${{ secrets.PUBLISHPROFILE_DEV }}
+          publish-profile: ${{ secrets.PUBLISHPROFILE  }}
           package: .
           
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build,deploy-stage]
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -100,5 +100,5 @@ jobs:
         with:
           app-name: 'blazorconf2022-ci-cd-code'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.PUBLISHPROFILE_DEV }}
+          publish-profile: ${{ secrets.PUBLISHPROFILE  }}
           package: .
