--- a/.github/workflows/build-deploy-image.yml
+++ b/.github/workflows/build-deploy-image.yml
@@ -13,7 +13,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.7
+        with:
+          versionSpec: '5.x'
+        
+      - name: Determine Version
+        id:   gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.7
+      
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
@@ -35,15 +44,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-      
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
-      with:
-        versionSpec: '5.x'
-        
-    - name: Determine Version
-      id:   gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.7
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -60,11 +60,11 @@ jobs:
       with:
         context: .
         tags: |
-          blazorconf2022.azurecr.io/blazor-conf-2022:${{ steps.gitversion.outputs.SemVer }}
+          blazorconf2022.azurecr.io/blazor-conf-2022:${{ jobs.build.steps.gitversion.outputs.SemVer }}
           blazorconf2022.azurecr.io/blazor-conf-2022:latest
         push: true
 
     - name: Create tag repository
       run: |
-        git tag "${{ steps.gitversion.outputs.SemVer }}"
-        git push origin "${{ steps.gitversion.outputs.SemVer }}"
+        git tag "${{ jobs.build.steps.gitversion.outputs.SemVer }}"
+        git push origin "${{ jobs.build.steps.gitversion.outputs.SemVer }}"
