--- a/.github/workflows/build-deploy-image.yml
+++ b/.github/workflows/build-deploy-image.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
@@ -34,6 +37,12 @@ jobs:
 
       - name: test with dotnet
         run: dotnet test
+        
+      - name: Create tag repository
+        run: |
+          git tag "${{ needs.build.outputs.version }}"
+          git push origin "${{ needs.build.outputs.version }}"
+          
     outputs:
       version: ${{ steps.gitversion.outputs.SemVer}}
       
@@ -45,8 +54,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -66,8 +73,3 @@ jobs:
           blazorconf2022.azurecr.io/blazor-conf-2022:${{ needs.build.outputs.version }}
           blazorconf2022.azurecr.io/blazor-conf-2022:latest
         push: true
-
-    - name: Create tag repository
-      run: |
-        git tag "${{ needs.build.outputs.version }}"
-        git push origin "${{ needs.build.outputs.version }}"
