--- a/.github/workflows/build-deploy-webapp.yml
+++ b/.github/workflows/build-deploy-webapp.yml
@@ -4,9 +4,10 @@
 name: Build and deploy ASP.Net Core app to Azure Web App - blazorconf2022-ci-cd-code
 
 on:
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
