Update build-deploy-image.yml for Azure Pipelines

--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -40,6 +40,15 @@ jobs:
     vmImage: ubuntu-latest
   
   steps:
-  - task: GitVersion@5
+  - task: gitversion/setup@0
+    displayName: Setup GitVersion
     inputs:
-      runtime: 'core'
+      versionSpec: '5.x'
+    
+  - task: gitversion/execute@0
+    displayName: Get Next Version Number
+    
+  - task: gittagloader@1
+    inputs:
+      filter: 'Latest'
+      lines: '1'
