--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -14,8 +14,12 @@ jobs:
   displayName: Build
   pool:
     vmImage: ubuntu-latest
-
+  
   steps:
+  - task: GitVersion@5
+    inputs:
+      versionSpec: '5.x'
+
   - task: UseDotNet@2
     displayName: 'use .net core sdk'
     inputs:
@@ -32,6 +36,12 @@ jobs:
     displayName: Test with dotnet
     inputs:
       command: 'test'
+  
+  - task: PowerShell@2
+    name: AssignVersion
+    inputs:
+      targetType: 'inline'
+      script: Write-Host "##vso[task.setvariable variable=isOutput=true]$(GitVersion.SemVer)"
 
 - job: Deploy
   displayName: Deploy
@@ -40,9 +50,10 @@ jobs:
     vmImage: ubuntu-latest
 
   steps:
-    - task: GitVersion@5
-      inputs:
-        versionSpec: '5.x'
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: echo $[ dependencies.Build.outputs[''AssignVersion.version''] ];
 
   #- task: gitversion/setup@0
   #  displayName: Setup GitVersion
