Update build-deploy-image.yml for Azure Pipelines

--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -41,7 +41,9 @@ jobs:
     name: AssignVersion
     inputs:
       targetType: 'inline'
-      script: Write-Host "##vso[task.setvariable variable=version;isOutput=true]$(GitVersion.SemVer)"
+      script: | 
+        Write-Host "##vso[task.setvariable variable=version;isOutput=true]$(GitVersion.SemVer)"
+        echo $(GitVersion.SemVer)
 
 - job: Deploy
   displayName: Deploy
