--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -9,89 +9,96 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-jobs:
-- job: Build
-  displayName: Build
-  pool:
-    vmImage: ubuntu-latest
-  
-  steps:
-  - task: GitVersion@5
-    inputs:
-      versionSpec: '5.x'
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: ubuntu-latest
+    
+    steps:
+    - task: GitVersion@5
+      inputs:
+        versionSpec: '5.x'
 
-  - task: UseDotNet@2
-    displayName: 'use .net core sdk'
-    inputs:
-      packageType: 'sdk'
-      version: '6.0.x'
-      includePreviewVersions: true
-      
-  - task: DotNetCoreCLI@2
-    displayName: Build with dotnet
-    inputs:
-      command: 'build'
+    - task: UseDotNet@2
+      displayName: 'use .net core sdk'
+      inputs:
+        packageType: 'sdk'
+        version: '6.0.x'
+        includePreviewVersions: true
+        
+    - task: DotNetCoreCLI@2
+      displayName: Build with dotnet
+      inputs:
+        command: 'build'
 
-  - task: DotNetCoreCLI@2
-    displayName: Test with dotnet
-    inputs:
-      command: 'test'
-  
-  - task: PowerShell@2
-    name: AssignVersion
-    inputs:
-      targetType: 'inline'
-      script: | 
-        Write-Host "##vso[task.setvariable variable=version;isOutput=true]$(GitVersion.SemVer)"
-        echo $(GitVersion.SemVer)
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: |
-        git tag $(GitVersion.SemVer)
-        git push origin $(GitVersion.SemVer)
+    - task: DotNetCoreCLI@2
+      displayName: Test with dotnet
+      inputs:
+        command: 'test'
+    
+    - task: PowerShell@2
+      name: AssignVersion
+      inputs:
+        targetType: 'inline'
+        script: | 
+          Write-Host "##vso[task.setvariable variable=version;isOutput=true]$(GitVersion.SemVer)"
+          echo $(GitVersion.SemVer)
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          git tag $(GitVersion.SemVer)
+          git push origin $(GitVersion.SemVer)
 
-- job: BuildAndPush
-  displayName: BuildAndPush
-  dependsOn: [Build]
-  pool:
-    vmImage: ubuntu-latest
-  variables:
-      dockerGitVersion: $[ dependencies.Build.outputs['AssignVersion.version'] ]
-
-  steps:
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: echo $(dockerGitVersion)
-
-  - task: Docker@2
+  - job: BuildAndPush
     displayName: BuildAndPush
-    inputs:
-      command: buildAndPush
-      repository: 'blazor-conf-2022-devops'
-      containerRegistry: 'blazorconfregistry'
-      tags: |
-        $(dockerGitVersion)
-        latest
+    dependsOn: [Build]
+    pool:
+      vmImage: ubuntu-latest
+    variables:
+        dockerGitVersion: $[ dependencies.Build.outputs['AssignVersion.version'] ]
 
-- job: 
-  displayName: BuildAndPush
-  environment: 'Stage'
+    steps:
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: echo $(dockerGitVersion)
+
+    - task: Docker@2
+      displayName: BuildAndPush
+      inputs:
+        command: buildAndPush
+        repository: 'blazor-conf-2022-devops'
+        containerRegistry: 'blazorconfregistry'
+        tags: |
+          $(dockerGitVersion)
+          latest
+
+- stage: DeployStage
+  displayName: Deploy Stage
   dependsOn: [BuildAndPush]
-  pool:
-    vmImage: ubuntu-latest
   variables: 
     dockerGitVersion: $[ dependencies.Build.outputs['AssignVersion.version'] ]
-    
-  steps:
-  - task: AzureWebAppContainer@1
-    inputs:
-      azureSubscription: 'Visual Studio Enterprise Subscription(659021ae-a62f-4259-adb4-5a094b114490)'
-      appName: 'blazorconf2022-ci-cd-container2'
-      deployToSlotOrASE: true
-      resourceGroupName: 'BlazorConf2022'
-      slotName: 'Stage'
-      containers: 'blazorconf2022.azurecr.io/blazor-conf-2022-devops:$(dockerGitVersion)'
+  pool:
+    vmImage: ubuntu-latest
+  
+  jobs:
+  - deployment: DeployStage
+    environment: 'Stage'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureWebAppContainer@1
+            inputs:
+              azureSubscription: 'Visual Studio Enterprise Subscription(659021ae-a62f-4259-adb4-5a094b114490)'
+              appName: 'blazorconf2022-ci-cd-container2'
+              deployToSlotOrASE: true
+              resourceGroupName: 'BlazorConf2022'
+              slotName: 'Stage'
+              containers: 'blazorconf2022.azurecr.io/blazor-conf-2022-devops:$(dockerGitVersion)'
 
 
