Update build-deploy-image.yml for Azure Pipelines

--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -51,7 +51,7 @@ stages:
         targetType: 'inline'
         script: |
           git tag $(GitVersion.SemVer)
-          git push origin $(GitVersion.SemVer)
+          git push origin --tags $(GitVersion.SemVer)
 
   - job: BuildAndPush
     displayName: BuildAndPush
