--- a/.azure-devops/build-deploy-image.yml
+++ b/.azure-devops/build-deploy-image.yml
@@ -86,7 +86,7 @@ stages:
   displayName: Deploy Stage
   dependsOn: [Build]
   variables: 
-    dockerGitVersion: $[ dependencies.Build.outputs['AssignVersion.version'] ]
+    dockerGitVersion: $[ stageDependencies.Build.Build.outputs['AssignVersion.version'] ]
   pool:
     vmImage: ubuntu-latest
   
@@ -97,6 +97,10 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: Bash@3
+            inputs:
+              targetType: 'inline'
+              script: echo $(dockerGitVersion)
           - task: AzureWebAppContainer@1
             inputs:
               azureSubscription: 'Visual Studio Enterprise Subscription(659021ae-a62f-4259-adb4-5a094b114490)'
