--- a/.github/workflows/build-deploy-image.yml
+++ b/.github/workflows/build-deploy-image.yml
@@ -1,11 +1,11 @@
 name: Docker Image CI
 
 on:
-#  push:
+# push:
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-#  workflow_dispatch:
+ workflow_dispatch:
   
 jobs:
   build:
